fix: gap

--- a/src/features/dashboard/update-app/AppUpdateForm/app-update-form.scss
+++ b/src/features/dashboard/update-app/AppUpdateForm/app-update-form.scss
@@ -60,7 +60,7 @@
 .scopesWrapper {
   display: flex;
   flex-direction: column;
-  gap: rem(1.6);
+  gap: rem(0.8);
 }
 
 .scopeItem {
